Node group discrepancies between EEVEE and Cycles #71374

Closed
opened 2019-11-06 00:17:46 +01:00 by Chris Clyne (Lateasusual) · 8 comments

Blender Version
Broken: 2.82, master, ece4515fc8, 2019-11-04
Worked: Never

Description
Plugging a Vector/Colour into a Scalar node group input produces a Scalar output in cycles, however in EEVEE it remains a vector.
I understand this is due to node group optimisations in Cycles, while in EEVEE node groups "disappear" during shader compilation.
I don't know which behaviour is preferred, but I assume there would be some small performance impact if every node group input/output was cast to it's respective type in the generated GLSL, so maybe a conditional check to see if the inputs match the expected type?

Steps to reproduce:
Left is LookDev/EEVEE, right is Cycles.

nodegrouptypes.blend

image.png

**Blender Version** Broken: 2.82, master, ece4515fc8aa, 2019-11-04 Worked: Never **Description** Plugging a Vector/Colour into a Scalar node group input produces a Scalar output in cycles, however in EEVEE it remains a vector. I understand this is due to node group optimisations in Cycles, while in EEVEE node groups "disappear" during shader compilation. I don't know which behaviour is preferred, but I assume there would be some small performance impact if every node group input/output was cast to it's respective type in the generated GLSL, so maybe a conditional check to see if the inputs match the expected type? **Steps to reproduce:** Left is LookDev/EEVEE, right is Cycles. [nodegrouptypes.blend](https://archive.blender.org/developer/F7954214/nodegrouptypes.blend) ![image.png](https://archive.blender.org/developer/F7953365/image.png)

Added subscriber: @lateasusual

Added subscriber: @lateasusual

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Could you please attach a sample file?

Could you please attach a sample file?

Here you go, everything as defaults aside from the creation of that node group
nodegrouptypes.blend

Here you go, everything as defaults aside from the creation of that node group [nodegrouptypes.blend](https://archive.blender.org/developer/F7954214/nodegrouptypes.blend)

Added subscriber: @brecht

Added subscriber: @brecht

I think this is to be solved in Eevee, if a link goes to a different socket type it should convert.

I think this is to be solved in Eevee, if a link goes to a different socket type it should convert.

This issue was referenced by c2e21b2329

This issue was referenced by c2e21b23296335bbab6e9acbb59518929efcc8e7
Clément Foucault self-assigned this 2020-01-23 17:41:39 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71374
No description provided.