Fix T71374 EEVEE: Fix Node group socket not converting inputs as in Cycles

Pretty straight Forward. Create a temp node during sockets expansion to
force the conversion to float.